--- a/MyFilm/MyFilm.csproj
+++ b/MyFilm/MyFilm.csproj
@@ -8,4 +8,41 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Font\**" />
+    <EmbeddedResource Remove="Font\**" />
+    <None Remove="Font\**" />
+    <Page Remove="Font\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Fonts\Pacifico-Regular.ttf" />
+    <None Remove="Fonts\RubikScribble-Regular.ttf" />
+    <None Remove="Picture\123.ico" />
+    <None Remove="Picture\124.ico" />
+    <None Remove="Picture\125.ico" />
+    <None Remove="Picture\127.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\Pacifico-Regular.ttf" />
+    <Resource Include="Fonts\RubikScribble-Regular.ttf" />
+    <Resource Include="Picture\123.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Picture\124.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Picture\125.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Picture\127.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
